# rust-wasm-graphql

./: CLAUDE.md  Cargo.toml  README.md
design/: README.md  cluster.md  command-flow.md  event-publishing.md  event-store.md  graphql-schema.md  hot-reload.md  multi-command-wit.md  observability.md  overview.md  projection.md  snapshot.md  wasm-instance-pool.md  wit-conventions.md
example/wasm-lib/: Cargo.toml
example/wasm-lib2/: Cargo.toml
example/wasm-lib2/src/: bindings.rs  lib.rs
example/wasm-lib2/wit/: world.wit
example/wit/: world.wit
host-server/: Cargo.toml  build.rs
host-server/src/: graphql.rs  lib.rs  main.rs  wasm_engine.rs  wasm_registry.rs
host-server/tests/: e2e_test.rs
wasm-lib/src/: lib.rs
worker/: Cargo.toml  README.md  build.rs
worker/design/: README.md  command-flow.md  event-store.md  graphql-schema.md  overview.md  wit-conventions.md
worker/src/: actor.rs  app.rs  command.rs  config.rs  error.rs  event_store.rs  graphql.rs  lib.rs  main.rs  runtime.rs  types.rs  wasm_engine.rs
worker/tests/: e2e_test.rs  event_store_test.rs  fuzz_test.rs
worker/tests/common/: mod.rs  pg_helpers.rs
worker/tests/wasm-counter/: Cargo.toml
worker/tests/wasm-counter/src/: bindings.rs  lib.rs
worker/tests/wasm-counter/wit/: world.wit
