[package]
name = "worker"
version = "0.1.0"
edition = "2021"
description = "基于 Virtual Actor 模型的事件溯源系统（单机版）"

[dependencies]
wasmtime = { version = "27", features = ["component-model"] }
wasmtime-wasi = "27"
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
wit-parser = "0.219"
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
indexmap = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
proptest = "1"
